# CuteSchedule

./: .gitignore  CMakeLists.txt  LICENSE.MD  README.MD  README.md  Schedule_ru_RU.ts  gradeSelect.ui  gradeselect.cpp  gradeselect.h  gui.h  logo.psd  main.cpp  styles.qss
.github/workflows/: cmakeQT.yml
default/: config.yml
include/yaml-cpp/: yaml-cpp.oldlib
nppBackup/: CMakeLists.txt.2022-02-18_184203.bak  gui.ui.2022-02-15_204346.bak
src/: Schedule_ru_RU.ts  about.ui  config.cpp  config.h  config.yml  cutelogger.cpp  cutelogger.h  errors.h  fakeloader.cpp  fakeloader.h  fakeloader.ui  gradeselect.cpp  gradeselect.h  gradeselect.ui  gradeview.cpp  gradeview.h  gradeview.ui  gui.cpp  gui.h  gui.ui  images.jfif  lessonview.cpp  lessonview.h  lessonview.ui  license_window.cpp  license_window.h  license_window.ui  licenser.cpp  licenser.h  locale.cpp  locale.h  logger.cpp  logger.h  main.cpp  mainwindow.ui  manager.cpp  manager.h  noposter.pdn  obfuscate.h  resource.h  (+7 more)
src/config/: config.cpp  config.h
src/locale/: current.txt  ru.txt
src/noGui/: console.h
src/scheduleObjects/: all.h  grade.h  lesson.h  s_class.h  teacher.h  util.h
src/util/: sysutil.cpp  sysutil.h  userutil.cpp  userutil.h
